--- a/launch/index.html
+++ b/launch/index.html
@@ -74,7 +74,7 @@
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="https://www.messenger.com/t/www.krispypapad.xyz/" data-toggle="tooltip" data-placement="bottom" title="Messenger"><img src="img/bot.png" style="width: 40px; margin-top: -15px; position: absolute;"/></a>
+                        <a class="page-scroll" href="https://m.me/krispypapad" data-toggle="tooltip" data-placement="bottom" title="Messenger"><img src="img/bot.png" style="width: 40px; margin-top: -15px; position: absolute;"/></a>
                     </li>
                 </ul>
             </div>
@@ -296,7 +296,7 @@
             <div class="row">
 		<div class="col-md-4">
 		    <span class="copyright" style="position:absolute; margin-top: -25px;">Facebook Messenger</span>
-    		    <a href="https://www.messenger.com/t/www.krispypapad.xyz/"><img src="img/krispy-papad-android-app-on-google-play.png" style="width:40%; margin-top: 8px;"/></a>
+    		    <a href="https://m.me/krispypapad"><img src="img/krispy-papad-android-app-on-google-play.png" style="width:40%; margin-top: 8px;"/></a>
 		</div>
 
                 <div class="col-md-3">
