--- a/launch/index.html
+++ b/launch/index.html
@@ -4,16 +4,14 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="Krispy Papad" content="">
-    <meta name="Krispy Papad" content="">
+    <!-- <meta name="Krispy Papad" content="">
+    <meta name="Krispy Papad" content=""> -->
 
-    <meta property="og:image" content="http://krispypapad.xyz/img/logo_gray.png" />
-
-	<meta property="og:description" content="Krispy Papad - Baked, Fried and Masala maarke!" />
-
-	<meta property="og:url" content="http://krispypapad.com/" />
-
-	<meta property="og:title" content="Krispy Papad - Baked, Fried and Masala maarke!" />
+	<meta property="og:url"                content="http://krispypapad.com/index.html" />
+	<meta property="og:type"               content="website" />
+	<meta property="og:title"              content="Krispy Papad - Baked, Fried and Masala maarke!" />
+	<meta property="og:description"        content="Krispy Papad - Baked, Fried and Masala maarke!" />
+	<meta property="og:image"              content="http://krispypapad.xyz/img/logo_gray.png" />
 
     <title>Krispy Papad - Baked, Fried and Masala maarke!</title>
     <link rel="icon" href="img/favicon.png" />
