--- a/launch/index.html
+++ b/launch/index.html
@@ -342,10 +342,20 @@
     <!-- Theme JavaScript -->
     <script src="js/agency.min.js"></script>
     <script>
-    $(document).ready(function(){
-       $('[data-toggle="tooltip"]').tooltip();
-    });
-</script>
+        $(document).ready(function(){
+           $('[data-toggle="tooltip"]').tooltip();
+        });
+    </script>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-43349874-6', 'auto');
+      ga('send', 'pageview');
+
+    </script>
 </body>
 
 </html>
