--- a/launch/index.html
+++ b/launch/index.html
@@ -26,7 +26,7 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 
     <!-- CSS -->
-    <link href="css/agency.min.css" rel="stylesheet">
+    <link href="css/agency.css" rel="stylesheet">
     <style>
         section {
             padding: 100px 0;
@@ -72,6 +72,9 @@
                     </li>
                     <li>
                         <a class="page-scroll" href="#about">About</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#events">Events</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#team">Team</a>
@@ -203,8 +206,36 @@
         </div>
     </section>
 
+    <!-- Events Section -->
+    <section id="events" class="bg-light-gray">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Upcoming Events</h2>
+                    <h3 class="section-subheading text-muted">Events for everyone</h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-4">
+                    
+                </div>
+                
+                <div class="col-sm-4">
+                     <div class="card">
+                      <img src="img/cloudcomputing.png" alt="Avatar" style="width:100%">
+                      <div class="card-container">
+                        <h4><b>Cloud Computing Workshop, Dr. AIT, Bangalore</b></h4>
+                        <p>Coming Soon</p>
+                      </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
     <!-- Team Section -->
-    <section id="team" class="bg-light-gray">
+    <section id="team" class="">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -262,8 +293,9 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-12">
-                    <form name="sentMessage" id="contactForm" novalidate>
+                <div class="col-lg-12" style="text-align: center;">
+                    <p style="color: #fff2f2; font-size: 30px;">info@krispypapad.com</p>
+                    <!-- <form name="sentMessage" id="contactForm" novalidate>
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="form-group">
@@ -291,7 +323,7 @@
                                 <button type="submit" id="submit" class="btn btn-xl">Send Message</button>
                             </div>
                         </div>
-                    </form>
+                    </form> -->
                 </div>
             </div>
         </div>
