--- a/launch/index.html
+++ b/launch/index.html
@@ -351,7 +351,8 @@
                         <li class="copyright">Copyright &copy; Krispy <span class="kp-color">Papad</span> 2016 |</li>
                         <li><a href="privacypolicy.html" style="color: #333341;">Privacy Policy</a>
                         </li>
-                        <!-- <li><a href="#" style="color: #333341;">Terms of Use</a> -->
+                        <li><a href="termsofservice.html" style="color: #333341;">Terms of Services</a>
+                        </li>
                         </li>
                     </ul>
                 </div>
