--- a/launch/privacypolicy.html
+++ b/launch/privacypolicy.html
@@ -55,6 +55,9 @@
                         <a class="page-scroll" href="index.html#about">About</a>
                     </li>
                     <li>
+                        <a class="page-scroll" href="index.html#events">Events</a>
+                    </li>
+                    <li>
                         <a class="page-scroll" href="index.html#team">Team</a>
                     </li>
                     <li>
@@ -69,7 +72,7 @@
 
     <section>
         <div class="container" style="text-align: justify;">
-            <h2 class="section-heading">Privacy Policy</h2>
+            <h2 class="section-heading">Krispypapad Privacy Policy</h2>
             <hr>
             <div>
                 We work hard to earn and keep your trust, therefore your privacy is our top most focus.
@@ -143,7 +146,8 @@
                         <li class="copyright">Copyright &copy; Krispy <span class="kp-color">Papad</span> 2016 |</li>
                         <li><a href="privacypolicy.html" style="color: #333341;">Privacy Policy</a>
                         </li>
-                        <!-- <li><a href="#" style="color: #333341;">Terms of Use</a> -->
+                        <li><a href="termsofservice.html" style="color: #333341;">Terms of Services</a>
+                        </li>
                         </li>
                     </ul>
                 </div>
